--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Showing the capabilities of Artifical Intelligence">
+    <meta name="keywords" content="artificial intelligence, ai abilities, ai capabilities, ai">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>AI Abilities</title>
 </head>
 <body>
     <h1>Ai Intelligence</h1>
