Added core structure for homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>AI Abilities</title>
 </head>
 <body>
-    <h1>Ai Intelligence</h1>
+    <header>Header Content</header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Artical about AI and chat gpt
+    </section>
+    <section>
+        Video link of how to use chat gpt 
+    </section>
+    <footer>
+        social links here
+    </footer>
 </body>
 </html>
