--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,26 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>AI Abilities</title>
 </head>
+
 <body>
-    <header>Header Content</header>
+    <header>
+        <a href="index.html">
+            <h1>AI Abilities</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Register Now</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main image
     </section>
@@ -19,10 +38,11 @@
         Artical about AI and chat gpt
     </section>
     <section>
-        Video link of how to use chat gpt 
+        Video link of how to use chat gpt
     </section>
     <footer>
         social links here
     </footer>
 </body>
+
 </html>
