--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>AI Abilities</h1>
+            <h1 class="logo">AI Abilities</h1>
         </a>
         <nav>
             <ul>
