Style navigation links

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 class="logo">AI Abilities</h1>
         </a>
         <nav>
-            <ul>
+            <ul class="nav">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" id="active">Home</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
