--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <section>
-        Main image
+        <div id="header-image"></div>
     </section>
     <section>
         Artical about AI and chat gpt
