Add text position for header and paragraphs in AI Info section

--- a/index.html
+++ b/index.html
@@ -31,15 +31,39 @@
             </ul>
         </nav>
     </header>
+
     <section>
         <div id="header-image"></div>
     </section>
+
     <section>
-        Artical about AI and chat gpt
+        <h2 class="ai-info">What is AI and what can it do?</h2>
+        <div id="left-txt">
+            <span>
+            <p>Artificial intelligence (AI) is intelligence demonstrated by machines,
+                as opposed to intelligence of humans and other animals. Example tasks
+                in which this is done include speech recognition, computer vision,
+                translation between (natural) languages, as well as other mappings of inputs.
+                AI applications include advanced web search engines (e.g., Google Search),
+                recommendation systems (used by YouTube, Amazon, and Netflix), understanding 
+                human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo),
+                generative or creative tools (ChatGPT and AI art), automated decision-making,
+                and competing at the highest level in strategic game systems (such as chess and Go).</p>
+            
+            </span>
+            <div id="left-txt">
+                <span>
+                <p> Watch the video below and see what ChatGPT is capable of!</p>
+                
+                </span>        
+            </div>        
+        </div>
     </section>
+
     <section>
         Video link of how to use chat gpt
     </section>
+
     <footer>
         social links here
     </footer>
