Add and positioned image for AI Info section

--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
                 and competing at the highest level in strategic game systems (such as chess and Go).</p>
             
             </span>
-            <div id="left-txt">
+        </div>
+            <div id="left-txt-bottom">
                 <span>
                 <p> Watch the video below and see what ChatGPT is capable of!</p>
-                
-                </span>        
+
+                </span> 
             </div>        
+        <div id="right-image">
+        <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo"
         </div>
     </section>
 
