Add video link and position text for youtube section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
                 </span> 
             </div>        
         <div id="right-image">
-        <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo"
+        <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo">
         </div>
     </section>
 
     <section>
-        Video link of how to use chat gpt
+        <div id="youtube-lnk">
+            <iframe width="400px" height="350px" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div id=youtube-txt>
+            <p>Click the Gallery link above and see some of the art created by AI</p>
+        </div>
     </section>
 
     <footer>
