Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <section>
         <div id="youtube-lnk">
             <iframe width="400px" height="350px" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div id=youtube-txt>
             <p>Click the Gallery link above and see some of the art created by AI</p>
@@ -74,8 +75,29 @@
     </section>
 
     <footer>
-        social links here
+        
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://reddit.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Reddit page (opens in a new tab)"><i class="fa fa-reddit-square"></i></a>
+            </li>
+        </ul>
     </footer>
+
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/6625e95135.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
