Add style to footer and social media icons

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </section>
 
     <footer>
-        
-        <ul>
+        <h2 class="footer-header">Follow us!</h2>
+        <ul id="social-media">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa fa-facebook-square"></i></a>
