--- a/gallery.html
+++ b/gallery.html
@@ -20,10 +20,10 @@
         <nav>
             <ul class="nav">
                 <li>
-                    <a href="index.html" id="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html"id="active">Gallery</a>
                 </li>
                 <li>
                     <a href="#">Register Now</a>
@@ -32,47 +32,7 @@
         </nav>
     </header>
 
-    <section>
-        <div id="header-image"></div>
-    </section>
 
-    <section>
-        <h2 class="ai-info">What is AI and what can it do?</h2>
-        <div id="left-txt">
-            <span>
-            <p>Artificial intelligence (AI) is intelligence demonstrated by machines,
-                as opposed to intelligence of humans and other animals. Example tasks
-                in which this is done include speech recognition, computer vision,
-                translation between (natural) languages, as well as other mappings of inputs.
-                AI applications include advanced web search engines (e.g., Google Search),
-                recommendation systems (used by YouTube, Amazon, and Netflix), understanding 
-                human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo),
-                generative or creative tools (ChatGPT and AI art), automated decision-making,
-                and competing at the highest level in strategic game systems (such as chess and Go).</p>
-            
-            </span>
-        </div>
-            <div id="left-txt-bottom">
-                <span>
-                <p> Watch the video below and see what ChatGPT is capable of!</p>
-
-                </span> 
-            </div>        
-        <div id="right-image">
-        <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo">
-        </div>
-    </section>
-
-    <section>
-        <div id="youtube-lnk">
-            <iframe width="400px" height="350px" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <div id=youtube-txt>
-            <p>Click the Gallery link above and see some of the art created by AI</p>
-        </div>
-    </section>
 
     <footer>
         <h2 class="footer-header">Follow us!</h2>
