Add and styled images for gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 class="logo">AI Abilities</h1>
+            <h1 class="logo-gallery">AI Abilities</h1>
         </a>
         <nav>
-            <ul class="nav">
+            <ul class="nav-gallery">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -32,7 +32,22 @@
         </nav>
     </header>
 
+    <section id="gallery-photo">
+    <div id="ai-face">
+        <img src="assets/css/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
+        <img src="assets/css/images/ai-face-one.jpg" alt="Woman under black light with face and hands painted with neon paint" id="center-image">
+        <img src="assets/css/images/ai-face-three.jpg" alt="Man looking up smiling with face and clothing covered in paint">
+    </div>
+    <div id="ai-painting">
+        <img src="assets/css/images/ai-painting-two.jpg" alt="A colourful painting with some triangle shapes">
+        <img src="assets/css/images/ai-painting-one.jpg" alt="A painting with a mixture of colours" id="center-image">
+        <img src="assets/css/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
+    </div>
+    </section>
 
+    <section>
+
+    </section>
 
     <footer>
         <h2 class="footer-header">Follow us!</h2>
