Add paragraph text to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -45,8 +45,13 @@
     </div>
     </section>
 
-    <section>
+    <section id="gallery-txt">
+    <div>
+        <p> Now we've seen what artificial intelligence is capable of, from writing letters to creating diet plans and even creating 
+            art and much more. This is just the tip of the ice-burg as we are still amongst the early stages of development and in time, will only get better!</p>
 
+        <p> Why not register with us today? It's free and you'll be able to receive updates on new developments, you can even join our online debate on whether artificial intelligence art should be classed as art or not. Click the register link above and have your say!</p>
+    </div>
     </section>
 
     <footer>
