Add core structure to register page

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <nav>
             <ul class="nav">
                 <li>
-                    <a href="index.html" id="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Register Now</a>
+                    <a href="register.html">Register Now</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <section>
+    <section id="header-layout">
         <div id="header-image"></div>
     </section>
 
-    <section>
+    <section id="ai-layout">
         <h2 class="ai-info">What is AI and what can it do?</h2>
         <div id="left-txt">
             <span>
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="youtube-layout">
         <div id="youtube-lnk">
             <iframe width="400px" height="350px" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
