--- a/register.html
+++ b/register.html
@@ -15,43 +15,25 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 class="logo-gallery">AI Abilities</h1>
+            <h1 class="logo">AI Abilities</h1>
         </a>
         <nav>
-            <ul class="nav-gallery">
+            <ul class="nav">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" id="active">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="register.html"id="active">Register Now</a>
+                    <a href="register.html" id="active">Register Now</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <section class="form-section">
+        
 
-    <section id="gallery-photo">
-    <div id="ai-face">
-        <img src="assets/css/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
-        <img src="assets/css/images/ai-face-one.jpg" alt="Woman under black light with face and hands painted with neon paint" id="center-image">
-        <img src="assets/css/images/ai-face-three.jpg" alt="Man looking up smiling with face and clothing covered in paint">
-    </div>
-    <div id="ai-painting">
-        <img src="assets/css/images/ai-painting-two.jpg" alt="A colourful painting with some triangle shapes">
-        <img src="assets/css/images/ai-painting-one.jpg" alt="A painting with a mixture of colours" id="center-image">
-        <img src="assets/css/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
-    </div>
-    </section>
-
-    <section id="gallery-txt">
-    <div>
-        <p> Now we've seen what artificial intelligence is capable of, from writing letters to creating diet plans and even creating 
-            art and much more. This is just the tip of the ice-burg as we are still amongst the early stages of development and in time, will only get better!</p>
-
-        <p> Why not register with us today? It's free and you'll be able to receive updates on new developments, you can even join our online debate on whether artificial intelligence art should be classed as art or not. Click the register link above and have your say!</p>
-    </div>
     </section>
 
     <footer>
