Add structure to form element

--- a/register.html
+++ b/register.html
@@ -32,7 +32,21 @@
         </nav>
     </header>
     <section class="form-section">
-        
+        <form action="" method="POST">
+            <h2>Register now for free!</h2>
+
+            <label for="fname">First Name</label>
+            <input required id="fname" type="text" name="first_name">
+
+            <label for="lname">Last Name</label>
+            <input required id="lname" type="text" name="last_name">
+
+            <label for="email">Email Address</label>
+            <input required id="email" type="email" name="email_address">
+
+            <input type="submit" value="Register!" class="join-button">
+
+        </form>
 
     </section>
 
