Add style to form element and background

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="nav">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html"id="active">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
