--- a/gallery.html
+++ b/gallery.html
@@ -23,10 +23,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html"id="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="register.html"id="active">Register Now</a>
+                    <a href="register.html">Register Now</a>
                 </li>
             </ul>
         </nav>
