Add media queries for larger to medium size screens 1245px and down

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html"id="active">Gallery</a>
+                    <a href="gallery.html" id="active">Gallery</a>
                 </li>
                 <li>
                     <a href="register.html">Register Now</a>
@@ -40,7 +40,7 @@
     </div>
     <div id="ai-painting">
         <img src="assets/css/images/ai-painting-two.jpg" alt="A colourful painting with some triangle shapes">
-        <img src="assets/css/images/ai-painting-one.jpg" alt="A painting with a mixture of colours" id="center-image">
+        <img src="assets/css/images/ai-painting-one.jpg" alt="A painting with a mixture of colours" id="center-image-two">
         <img src="assets/css/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
     </div>
     </section>
