--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="nav">
                 <li>
-                    <a href="index.html"id="active">Home</a>
+                    <a href="index.html" id="active">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -39,7 +39,6 @@
     <section id="ai-layout">
         <h2 class="ai-info">What is AI and what can it do?</h2>
         <div id="left-txt">
-            <span>
             <p>Artificial intelligence (AI) is intelligence demonstrated by machines,
                 as opposed to intelligence of humans and other animals. Example tasks
                 in which this is done include speech recognition, computer vision,
@@ -49,24 +48,20 @@
                 human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo),
                 generative or creative tools (ChatGPT and AI art), automated decision-making,
                 and competing at the highest level in strategic game systems (such as chess and Go).</p>
-            
-            </span>
         </div>
-            <div id="left-txt-bottom">
-                <span>
-                <p> Watch the video below and see what ChatGPT is capable of!</p>
-
-                </span> 
-            </div>        
         <div id="right-image">
-        <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo">
-        </div>
+            <img src="assets/css/images/happy-robot.jpg" alt="A happy robot taking a photo">
+            </div>
+            
+            <div id="left-txt-bottom">
+                <p> Watch the video below and see what ChatGPT is capable of!</p> 
+            </div>        
     </section>
 
     <section id="youtube-layout">
         <div id="youtube-lnk">
-            <iframe width="400px" height="350px" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            <iframe width="400" height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
+            title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div id=youtube-txt>
