Complete media queries for screen size 1007px and down

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <p>Artificial intelligence (AI) is intelligence demonstrated by machines,
                 as opposed to intelligence of humans and other animals. Example tasks
                 in which this is done include speech recognition, computer vision,
-                translation between (natural) languages, as well as other mappings of inputs.
-                AI applications include advanced web search engines (e.g., Google Search),
+                translation between (natural) languages, as well as other mappings of inputs.</p>
+                <p>AI applications include advanced web search engines (e.g., Google Search),
                 recommendation systems (used by YouTube, Amazon, and Netflix), understanding 
                 human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo),
                 generative or creative tools (ChatGPT and AI art), automated decision-making,
