--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section id="youtube-layout">
         <div id="youtube-lnk">
-            <iframe width="400" height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
+            <iframe min-width="400" min-height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc" 
             title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
