feat(register) add media query for screen size 640px

--- a/gallery.html
+++ b/gallery.html
@@ -20,13 +20,13 @@
         <nav>
             <ul class="nav-gallery">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" aria-label="A link to home page">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html" id="active">Gallery</a>
+                    <a href="gallery.html" id="active" aria-label="A link to gallery page">Gallery</a>
                 </li>
                 <li>
-                    <a href="register.html">Register Now</a>
+                    <a href="register.html" aria-label="A link to register page">Register Now</a>
                 </li>
             </ul>
         </nav>
