--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <nav>
             <ul class="nav">
                 <li>
-                    <a href="index.html" id="active">Home</a>
+                    <a href="index.html" id="active" aria-label="A link to home page">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html" aria-label="A link to gallery page">Gallery</a>
                 </li>
                 <li>
-                    <a href="register.html">Register Now</a>
+                    <a href="register.html" aria-label="A link to register page">Register Now</a>
                 </li>
             </ul>
         </nav>
