feat(home,gallery,register) amend nav links to color white

--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+<main>
     <section id="gallery-photo">
     <div id="ai-face">
         <img src="assets/css/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
@@ -53,7 +53,7 @@
         <p> Why not register with us today? It's free and you'll be able to receive updates on new developments, you can even join our online debate on whether artificial intelligence art should be classed as art or not. Click the register link above and have your say!</p>
     </div>
     </section>
-
+</main>
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
