--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+<main></main>
     <section id="header-layout">
         <div id="header-image"></div>
     </section>
@@ -68,7 +68,7 @@
             <p>Click the Gallery link above and see some of the art created by AI</p>
         </div>
     </section>
-
+</main>
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
