--- a/register.html
+++ b/register.html
@@ -31,8 +31,9 @@
             </ul>
         </nav>
     </header>
+    <main>
     <section class="form-section">
-        <form action="" method="POST" class="register-form">
+        <form action="https://formdump.codeinstitute.net/" class="register-form">
             <h2>Register now for free!</h2>
 
             <label for="fname">First Name</label>
@@ -52,7 +53,7 @@
         </form>
 
     </section>
-
+</main>
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
