feat:Amend images file path

--- a/register.html
+++ b/register.html
@@ -32,46 +32,43 @@
         </nav>
     </header>
     <main>
-    <section class="form-section">
-        <form action="https://formdump.codeinstitute.net/" class="register-form">
-            <h2>Register now for free!</h2>
+        <section class="form-section">
+            <form action="https://formdump.codeinstitute.net/" class="register-form">
+                <h2>Register now for free!</h2>
 
-            <label for="fname">First Name</label>
-            <input required id="fname" type="text" name="first_name"
-            class="text-input">
+                <label for="fname">First Name</label>
+                <input required id="fname" type="text" name="first_name" class="text-input">
 
-            <label for="lname">Last Name</label>
-            <input required id="lname" type="text" name="last_name"
-            class="text-input">
+                <label for="lname">Last Name</label>
+                <input required id="lname" type="text" name="last_name" class="text-input">
 
-            <label for="email">Email Address</label>
-            <input required id="email" type="email" name="email_address"
-            class="text-input">
+                <label for="email">Email Address</label>
+                <input required id="email" type="email" name="email_address" class="text-input">
 
-            <input type="submit" value="Register!" class="join-button">
+                <input type="submit" value="Register!" class="join-button">
 
-        </form>
+            </form>
 
-    </section>
-</main>
+        </section>
+    </main>
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa fa-twitter-square"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa fa-twitter-square"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa fa-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://reddit.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Reddit page (opens in a new tab)"><i class="fa fa-reddit-square"></i></a>
+                <a href="https://reddit.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Reddit page (opens in a new tab)"><i class="fa fa-reddit-square"></i></a>
             </li>
         </ul>
     </footer>
