feat: right-image removed from index.html

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--This is the header-->
     <header>
         <a href="index.html">
             <h1 class="logo-gallery">AI Abilities</h1>
@@ -31,7 +32,9 @@
             </ul>
         </nav>
     </header>
+    <!--This is the main-->
     <main>
+        <!--Gallery images-->
         <section id="gallery-photo">
             <div id="ai-face">
                 <img src="assets/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
@@ -47,7 +50,7 @@
                 <img src="assets/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
             </div>
         </section>
-
+        <!--Gallery text-->
         <section id="gallery-txt">
             <div>
                 <p> Now we've seen what artificial intelligence is capable of, from writing letters to creating diet
@@ -61,6 +64,7 @@
             </div>
         </section>
     </main>
+    <!--This is the footer-->
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
