--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--This is the header-->
     <header>
         <a href="index.html">
             <h1 class="logo">AI Abilities</h1>
@@ -31,11 +32,13 @@
             </ul>
         </nav>
     </header>
+    <!--This is the main-->
     <main></main>
+    <!--Header image-->
     <section id="header-layout">
         <div id="header-image"></div>
     </section>
-
+    <!--About text and homepage image-->
     <section id="ai-layout">
         <h2 class="ai-info">What is AI and what can it do?</h2>
         <div id="left-txt">
@@ -49,15 +52,13 @@
                 generative or creative tools (ChatGPT and AI art), automated decision-making,
                 and competing at the highest level in strategic game systems (such as chess and Go).</p>
         </div>
-        <div id="right-image">
-            <img src="assets/images/happy-robot.jpg" alt="A happy robot taking a photo">
-        </div>
+        
 
         <div id="left-txt-bottom">
             <p> Watch the video below and see what ChatGPT is capable of!</p>
         </div>
     </section>
-
+    <!--You tube video link and text-->
     <section id="youtube-layout">
         <div id="youtube-lnk">
             <iframe min-width="400" min-height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc"
@@ -69,6 +70,7 @@
         </div>
     </section>
     </main>
+    <!--This is the footer-->
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
