--- a/register.html
+++ b/register.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--This is the header-->
     <header>
         <a href="index.html">
             <h1 class="logo-register">AI Abilities</h1>
@@ -31,7 +32,9 @@
             </ul>
         </nav>
     </header>
+    <!--This is the main-->
     <main>
+        <!--This is the form application-->
         <section class="form-section">
             <form action="https://formdump.codeinstitute.net/" class="register-form">
                 <h2>Register now for free!</h2>
@@ -51,6 +54,7 @@
 
         </section>
     </main>
+    <!--This is the footer-->
     <footer>
         <h2 class="footer-header">Follow us!</h2>
         <ul id="social-media">
