feat:Amend register nav link, adjusted gallery photos for large screen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="gallery.html" aria-label="A link to gallery page">Gallery</a>
                 </li>
                 <li>
-                    <a href="register.html" aria-label="A link to register page">Register Now</a>
+                    <a href="register.html" aria-label="A link to register page">Register</a>
                 </li>
             </ul>
         </nav>
