--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <!--This is the main-->
-    <main></main>
+    <main>
     <!--Header image-->
     <section id="header-layout">
         <div id="header-image"></div>
@@ -59,7 +59,7 @@
     <!--You tube video link and text-->
     <section id="youtube-layout">
         <div id="youtube-lnk">
-            <iframe min-width="400" min-height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc"
+            <iframe width="400" height="350" src="https://www.youtube.com/embed/mFa7Kxwqruc"
                 title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
