--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--This is the header-->
     <header>
         <a href="index.html">
             <h1 class="logo-gallery">AI Abilities</h1>
@@ -31,58 +32,66 @@
             </ul>
         </nav>
     </header>
-    <section id="gallery-photo">
-        <div id="ai-face">
-            <img src="assets/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
-            <img src="assets/images/ai-face-one.jpg" alt="Woman under black light with face and hands painted with neon paint" id="center-image">
-            <img src="assets/images/ai-face-three.jpg" alt="Man looking up smiling with face and clothing covered in paint">
-        </div>
-        <div id="ai-painting">
-            <img src="assets/images/ai-painting-two.jpg" alt="A colourful painting with some triangle shapes">
-            <img src="assets/images/ai-painting-one.jpg" alt="A painting with a mixture of colours" id="center-image-two">
-            <img src="assets/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
-        </div>
-    </section>
-
-    <section>
-        <section id="gallery-txt">
-            <div>
-                <p> Now we've seen what artificial intelligence is capable of, from writing letters to creating diet
-                    plans and even creating
-                    art and much more. This is just the tip of the ice-burg as we are still amongst the early stages of
-                    development and in time, will only get better!</p>
-
-                <p> Why not register with us today? It's free and you'll be able to receive updates on new developments,
-                    you can even join our online debate on whether artificial intelligence art should be classed as art
-                    or not. Click the register link above and have your say!</p>
+    <!--This is the main-->
+    <main>
+        <!--Gallery images-->
+        <section id="gallery-photo">
+            <div id="ai-face">
+                <img src="assets/images/ai-face-two.jpg" alt="Person with face painted with bright colours">
+                <img src="assets/images/ai-face-one.jpg"
+                    alt="Woman under black light with face and hands painted with neon paint" id="center-image">
+                <img src="assets/images/ai-face-three.jpg"
+                    alt="Man looking up smiling with face and clothing covered in paint">
+            </div>
+            <div id="ai-painting">
+                <img src="assets/images/ai-painting-two.jpg" alt="A colourful painting with some triangle shapes">
+                <img src="assets/images/ai-painting-one.jpg" alt="A painting with a mixture of colours"
+                    id="center-image-two">
+                <img src="assets/images/ai-painting-three.jpg" alt="A colourful painting with some bubble shapes">
             </div>
         </section>
+        <!--Gallery text-->
+        <section>
+            <section id="gallery-txt">
+                <div>
+                    <p> Now we've seen what artificial intelligence is capable of, from writing letters to creating diet
+                        plans and even creating
+                        art and much more. This is just the tip of the ice-burg as we are still amongst the early stages
+                        of
+                        development and in time, will only get better!</p>
 
-        <footer>
-            <h2 class="footer-header">Follow us!</h2>
-            <ul id="social-media">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i
-                            class="fa fa-facebook-square"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fa fa-twitter-square"></i></a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa fa-instagram"></i></a>
-                </li>
-                <li>
-                    <a href="https://reddit.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Reddit page (opens in a new tab)"><i class="fa fa-reddit-square"></i></a>
-                </li>
-            </ul>
-        </footer>
-        <!-- font awesome script-->
-        <script src="https://kit.fontawesome.com/6625e95135.js" crossorigin="anonymous"></script>
+                    <p> Why not register with us today? It's free and you'll be able to receive updates on new
+                        developments,
+                        you can even join our online debate on whether artificial intelligence art should be classed as
+                        art
+                        or not. Click the register link above and have your say!</p>
+                </div>
+            </section>
+    </main>
+    <!--This is the footer-->
+    <footer>
+        <h2 class="footer-header">Follow us!</h2>
+        <ul id="social-media">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://reddit.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Reddit page (opens in a new tab)"><i class="fa fa-reddit-square"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/6625e95135.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
